...
        </com.google.android.material.appbar.AppBarLayout>

        <include layout="@layout/content_note_x" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/add_new_note"
            app:srcCompat="@drawable/ic_baseline_add_24" />
...
